forums fix comment overflow

--- a/stylesheet/forums.css
+++ b/stylesheet/forums.css
@@ -16,6 +16,7 @@ div#forums
 
 div#allComment
 {
+	margin-bottom: 50px; 
 	width: auto;
 }
 
@@ -352,4 +353,9 @@ div#arr2
 
 	height: 50px;
 	width: 50px;
+}
+
+div#empty
+{
+	height: 1000px;
 }
